# Risk

./: CMakeLists.txt  RiskGame.cpp  RiskGame.h  RiskMap.cpp  RiskMap.h  RiskPlayer.cpp  RiskPlayer.h  RiskTerritory.cpp  RiskTerritory.h  main.cpp
resources/: adjacencies.csv  map_data.csv
util_scripts/: find_black_pixels.py  imgscript.py  list_colors.py  make_csv.py  remove_black_lines.py  validate_adjacencies.py
